--- a/education.html
+++ b/education.html
@@ -39,7 +39,7 @@
       <table>
         <tr class="table-header">
           <th class="deg-head">Degree</th>
-          <th class="colg-head">School/College</th>
+          <th class="colg-head">Institution</th>
           <th class="percent-head">Percentage</th>
         </tr>
         <tr>
